--- a/index.html
+++ b/index.html
@@ -1,39 +1,58 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Sign In</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-</head>
-<body>
-	<img src="logo1.png" alt="Placeholder Image">
-	<div class="container">
-		<div class="login-container">
-			<form>
-				<h2>Sign In</h2>
-				<label for="email">Email</label>
-				<input type="text" id="username" name="username">
-				<label for="password">Password</label>
-				<input type="password" id="password" name="password">
-				<button id="submit" type="submit">Sign In</button>
-				<div class="social-login">
-					<p>Or sign in with:</p>
-				<div>
-					<ion-icon class="facebook" name="logo-facebook"></ion-icon>
-					<ion-icon class="google" name="logo-google"></ion-icon>
-				</div>
-					<!-- <button class="google-btn">Sign in with Google</button>
-					<button class="facebook-btn">Sign in with Facebook</button> -->
-				</div>
-				<div class="forgot-password">
-					<a href="#">Forgot Password?</a>
-				</div>
-			</form>
-		</div>
-		<div class="image-container">
-			<img src="logo3.png" alt="Placeholder Image">
-		</div>
-	</div>
-</body>
+  <head>
+    <title>Sign In</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+  </head>
+  <body>
+    <div class="container">
+      <div class="login-container">
+        <img src="./Brand-Logo.png" alt="Placeholder Image" />
+        <form>
+          <h1>Sign In</h1>
+          <div class="need-fix">
+            <label for="email">Email</label>
+            <input type="text" id="username" name="username" />
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" />
+            <p><input type="checkbox" />Remember Me</p>
+            <p><a href="#">Forgot Password?</a></p>
+          </div>
+          <button type="submit">Sign In</button>
+          <div class="social-login">
+            <p>Or sign in with:</p>
+            <div>
+              <a href="#"
+                ><ion-icon class="google" name="logo-google"></ion-icon
+              ></a>
+              <a href="#"
+                ><ion-icon class="facebook" name="logo-facebook"></ion-icon
+              ></a>
+              <a href="#">
+                <ion-icon class="instagram" name="logo-instagram"></ion-icon
+              ></a>
+              <a href="#">
+                <ion-icon class="linkedin" name="logo-linkedin"></ion-icon
+              ></a>
+            </div>
+          </div>
+          <div class="forgot-password">
+            Don't have an account?
+            <a href="./SignUp.html">Click here to sign Up</a>
+          </div>
+        </form>
+      </div>
+      <div class="image-container">
+        <img src="./Logo.png" alt="Placeholder Image" />
+      </div>
+    </div>
+  </body>
 </html>
