--- a/About.html
+++ b/About.html
@@ -25,6 +25,30 @@
         exercitationem optio alias corporis doloremque, neque vero eaque ex
         facilis!
       </p>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut dolorum quo
+        quasi qui necessitatibus laudantium culpa ad libero! Quod a
+        exercitationem optio alias corporis doloremque, neque vero eaque ex
+        facilis!
+      </p>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut dolorum quo
+        quasi qui necessitatibus laudantium culpa ad libero! Quod a
+        exercitationem optio alias corporis doloremque, neque vero eaque ex
+        facilis!
+      </p>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut dolorum quo
+        quasi qui necessitatibus laudantium culpa ad libero! Quod a
+        exercitationem optio alias corporis doloremque, neque vero eaque ex
+        facilis!
+      </p>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut dolorum quo
+        quasi qui necessitatibus laudantium culpa ad libero! Quod a
+        exercitationem optio alias corporis doloremque, neque vero eaque ex
+        facilis!
+      </p>
     </main>
     <img class="Brand-Logo" src="./Brand-Logo.png" alt="Our logo brand" />
   </body>
