--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sign In</title>
+    <title>Log In</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script
       type="module"
@@ -46,7 +46,7 @@
           </div>
           <div class="forgot-password">
             Don't have an account?
-            <a href="./SignUp.html">Click here to sign Up</a>
+            <a href="./SignUp.html">Click here to Sign Up</a>
           </div>
         </form>
       </div>
