--- a/SignUp.html
+++ b/SignUp.html
@@ -17,24 +17,29 @@
   </head>
   <body>
     <div class="Left"><img src="./Logo.png" alt="Logo" /></div>
-    <form class="sign-up-form">
+    <form
+      class="sign-up-form"
+      name="SignUpForm"
+      action="Verification.php"
+      method="POST"
+    >
       <img src="./Brand-Logo.png" alt="Brand Logo" />
       <h1>Sign Up</h1>
       <p>Create your RainCheck account here!</p>
       <label>First Name</label>
       <label>Last Name</label>
-      <input type="text" />
-      <input type="text" />
+      <input type="text" name="firstname" />
+      <input type="text" name="lastname" />
       <label>Password</label>
       <label>Confirm Password</label>
-      <input type="password" />
+      <input type="password" name="pass" />
       <input type="password" />
       <label>Phone Number</label>
       <label>Email Address</label>
-      <input type="tel" />
-      <input type="email" />
+      <input type="tel" name="phonenumber" />
+      <input type="email" name="email" />
       <p><input type="checkbox" />I agree with the terms of use</p>
-      <button type="submit">Sign Up</button>
+      <input type="submit" id="btn" value="Sign Up" name="submit" />
       <p>or sign up with</p>
       <div>
         <a href="#"><ion-icon class="google" name="logo-google"></ion-icon></a>
@@ -44,7 +49,7 @@
         <a href="#">
           <ion-icon class="instagram" name="logo-instagram"></ion-icon
         ></a>
-        <a href="#">
+        <a hr ef="#">
           <ion-icon class="linkedin" name="logo-linkedin"></ion-icon
         ></a>
       </div>
