Update on Reset Password page

--- a/ForgotPassword.html
+++ b/ForgotPassword.html
@@ -28,15 +28,19 @@
         <form
           class="sign-up-form"
           name="ForgotPassword"
-          action="ForgotPassword.php"
+          action="Verification.php"
           method="POST"
         >
-          <input type="text" id="ForgotPassword-emailaddress" name="email" />
+          <input
+            type="text"
+            id="ForgotPassword-emailaddress"
+            name="emailFromForgotPassword"
+          />
           <input
             type="submit"
             id="btn-ForgotPassword"
             value="Confirm"
-            name="submit"
+            name="submitFromForgotPassword"
           />
         </form>
       </div>
