--- a/ForgotPassword.html
+++ b/ForgotPassword.html
@@ -21,8 +21,8 @@
         <ion-icon name="finger-print-outline"></ion-icon>
         <h1>Forgot Password?</h1>
         <p>
-          Enter your email address and we’ll send you an email with instructions
-          to reset your password
+          Enter your email address and we will send you an email with
+          instructions to reset your password
         </p>
         <label for="email">Email</label>
         <form
