--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <label for="password">Password</label>
             <input type="password" id="password" name="password" />
             <p><input type="checkbox" />Remember Me</p>
-            <p><a href="#">Forgot Password?</a></p>
+            <p><a href="./ForgotPassword.html">Forgot Password?</a></p>
           </div>
           <button type="submit">Sign In</button>
           <div class="social-login">
