Front end elements added
About Content, Home Page and other pages Nav Bar, logo image updated with higher resolution, Signup page password requirements added, signup page phone number formatting added

--- a/SignUp.html
+++ b/SignUp.html
@@ -14,6 +14,61 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
+    <script>
+      function validatePassword() {
+        const password = document.getElementsByName("pass")[0];
+        const confirmPassword = document.getElementsByName("confirmPass")[0];
+        const passwordRequirements = /^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[!@#$%^&*]).{8,}$/;
+
+        if (!passwordRequirements.test(password.value) || !passwordRequirements.test(confirmPassword.value)) {
+          alert(
+            "Password and Confirm Password must be at least 8 characters long, contain one upper case letter, one lower case letter, one number, and one special character."
+          );
+          return false;
+        }
+
+        if (password.value !== confirmPassword.value) {
+          alert("Password and Confirm Password do not match.");
+          return false;
+        }
+
+        return true;
+      }
+
+      function validateForm() {
+        return validatePassword();
+      }
+
+      function updateRequirements() {
+        const password = document.getElementsByName("pass")[0].value;
+        const requirements = {
+          length: /(?=.{8,})/,
+          lowerCase: /(?=.*[a-z])/,
+          upperCase: /(?=.*[A-Z])/,
+          number: /(?=.*\d)/,
+          specialChar: /(?=.*[!@#$%^&*])/,
+        };
+
+        for (const key in requirements) {
+          const reqElement = document.getElementById(key);
+          if (requirements[key].test(password)) {
+            reqElement.classList.add("matched");
+            reqElement.classList.remove("not-matched");
+          } else {
+            reqElement.classList.add("not-matched");
+            reqElement.classList.remove("matched");
+          }
+        }
+      }
+
+      function formatPhoneNumber(event) {
+        const phoneNumber = event.target.value.replace(/\D/g, '');
+        const formattedPhoneNumber = phoneNumber
+          .replace(/(\d{3})(\d{3})(\d{4})/, '($1) $2-$3')
+          .substring(0, 14);
+        event.target.value = formattedPhoneNumber;
+      }
+    </script>
   </head>
   <body>
     <div class="Left"><img src="./Logo.png" alt="Logo" /></div>
@@ -22,6 +77,7 @@
       name="SignUpForm"
       action="Verification.php"
       method="POST"
+      onsubmit="return validateForm()"
     >
       <img src="./Brand-Logo.png" alt="Brand Logo" />
       <h1>Sign Up</h1>
@@ -30,14 +86,22 @@
       <label>Last Name</label>
       <input type="text" name="firstname" />
       <input type="text" name="lastname" />
-      <label>Password</label>
-      <label>Confirm Password</label>
-      <input type="password" name="pass" />
-      <input type="password" />
       <label>Phone Number</label>
       <label>Email Address</label>
-      <input type="tel" name="phonenumber" />
+      <input type="tel" name="phonenumber" oninput="formatPhoneNumber(event)" />
       <input type="email" name="email" />
+      <label>Password</label>
+      <label>Confirm Password</label>
+      <input type="password" name="pass" oninput="updateRequirements()" />
+      <input type="password" name="confirmPass" />
+      <ul class="password-requirements">
+        <li id="length" class="not-matched">8 characters minimum</li>
+        <li id="upperCase" class="not-matched">One uppercase letter</li>
+        <li id="lowerCase" class="not-matched">One lowercase letter</li>
+        <li id="number" class="not-matched">One number</li>
+        <li id="specialChar" class="not-matched">One special character (!@#$%^&*)</li>
+      </ul>
+      
       <p><input type="checkbox" />I agree with the terms of use</p>
       <input type="submit" id="btn" value="Sign Up" name="submit" />
       <p>or sign up with</p>
