--- a/SignUp.html
+++ b/SignUp.html
@@ -42,6 +42,9 @@
       function validateForm() {
         return validatePassword();
       }
+      function filterNameInput(event) {
+        event.target.value = event.target.value.replace(/[^A-Za-z]/g, "");
+      }
 
       function updateRequirements() {
         const password = document.getElementsByName("pass")[0].value;
@@ -88,17 +91,17 @@
       <p>Create your RainCheck account here!</p>
       <label>First Name</label>
       <label>Last Name</label>
-      <input type="text" name="firstname" required />
-      <input type="text" name="lastname" required />
-      <label>Email Address</label>
+      <input type="text" name="firstname" oninput="filterNameInput(event)" required />
+      <input type="text" name="lastname" oninput="filterNameInput(event)" required />
       <label>Phone Number</label>
-      <input type="email" name="email" required />
+      <label>Email Address</label>
       <input
         type="tel"
         name="phonenumber"
         oninput="formatPhoneNumber(event)"
         required
       />
+      <input type="email" name="email" required />
       <label>Password</label>
       <label>Confirm Password</label>
       <input
