Password match updated along with logo in about page

--- a/About.html
+++ b/About.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="sticky-header">
-            <img style="width: 200px;" src="logo.png" alt="Logo" class="logo">
+            <img style="width: 200px;" src="Logo.png" alt="Logo" class="logo">
             <div class="page-title">About Us</div>
             <div class="navigation">
                 <header>
