--- a/ForgotPassword.html
+++ b/ForgotPassword.html
@@ -1,52 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Forgot Password</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-    ></script>
-  </head>
-  <body>
-    <div class="container">
-      <div
-        class="login-container Verification-container ForgotPassword-container"
-      >
-        <img src="./Brand-Logo.png" alt="Placeholder Image" />
-        <ion-icon name="finger-print-outline"></ion-icon>
-        <h1>Forgot Password?</h1>
-        <p>
-          Enter your email address and we will send you an email with
-          instructions to reset your password
-        </p>
-        <label for="email">Email</label>
-        <form
-          class="sign-up-form"
-          name="ForgotPassword"
-          action="Verification.php"
-          method="POST"
-        >
-          <input
-            type="text"
-            id="ForgotPassword-emailaddress"
-            name="emailFromForgotPassword"
-          />
-          <input
-            type="submit"
-            id="btn-ForgotPassword"
-            value="Confirm"
-            name="submitFromForgotPassword"
-          />
-        </form>
-      </div>
-      <div class="image-container">
-        <img src="./Logo.png" alt="Placeholder Image" />
-      </div>
+
+<head>
+  <title>Forgot Password</title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+</head>
+
+<body>
+  <div class="container">
+    <div class="login-container Verification-container ForgotPassword-container">
+      <img src="./Brand-Logo.png" alt="Placeholder Image" />
+      <ion-icon name="finger-print-outline"></ion-icon>
+      <h1>Forgot Password?</h1>
+      <p>
+        Enter your email address and we will send you an email with
+        instructions to reset your password
+      </p>
+      <label for="email">Email</label>
+      <form class="sign-up-form" name="ForgotPassword" action="Verification.php" method="POST">
+        <input type="text" id="ForgotPassword-emailaddress" name="emailFromForgotPassword" />
+        <input type="submit" id="btn-ForgotPassword" value="Confirm" name="submitFromForgotPassword" />
+      </form>
     </div>
-  </body>
+    <div class="image-container">
+      <img src="./Logo.png" alt="Placeholder Image" />
+    </div>
+  </div>
+</body>
+
 </html>
