--- a/Home.html
+++ b/Home.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="./Home.css" />
-    <title>Home</title>
-  </head>
-  <body>
-    <div class="sticky-header">
-      <img style="width: 200px" src="./Logo.png" alt="Logo" class="logo" />
-      <div class="page-title">Home</div>
-      <div class="navigation">
-        <header>
-          <div class="buttons">
-            <a style="margin-left: 5%" href="./Home.html" class="button-home"
-              >Home</a
-            >
-            <a href="./About.html" class="button-about">About Us</a>
-            <a href="#" class="button-faq">FAQ</a>
-          </div>
-          <div class="logout">
-            <a href="#">Log Out</a>
-          </div>
-        </header>
-      </div>
+
+<head>
+  <link rel="stylesheet" href="./Home.css" />
+  <title>Home</title>
+</head>
+
+<body>
+  <div class="sticky-header">
+    <img style="width: 200px" src="./Logo.png" alt="Logo" class="logo" />
+    <div class="page-title">Home</div>
+    <div class="navigation">
+      <header>
+        <div class="buttons">
+          <a style="margin-left: 5%" href="./Home.html" class="button-home">Home</a>
+          <a href="./About.html" class="button-about">About Us</a>
+          <a href="#" class="button-faq">FAQ</a>
+        </div>
+        <div class="logout">
+          <a href="#">Log Out</a>
+        </div>
+      </header>
     </div>
-    <main>
-      <div class="search">
-        <form>
-          <input type="text" placeholder="Search..." />
-          <button type="submit">Search</button>
-        </form>
-      </div>
-    </main>
-  </body>
+  </div>
+  <main>
+    <div class="search">
+      <form>
+        <input type="text" placeholder="Search..." />
+        <button type="submit">Search</button>
+      </form>
+    </div>
+  </main>
+</body>
+
 </html>
