--- a/ForgotPassword.html
+++ b/ForgotPassword.html
@@ -20,7 +20,7 @@
       </p>
       <label for="email">Email</label>
       <form class="sign-up-form" name="ForgotPassword" action="Verification.php" method="POST">
-        <input type="text" id="ForgotPassword-emailaddress" name="emailFromForgotPassword" />
+        <input type="email" id="ForgotPassword-emailaddress" name="emailFromForgotPassword" required/>
         <input type="submit" id="btn-ForgotPassword" value="Confirm" name="submitFromForgotPassword" />
       </form>
     </div>
