--- a/SignUp.html
+++ b/SignUp.html
@@ -118,7 +118,7 @@
       </li>
     </ul>
 
-    <p><input type="checkbox" />I agree with the terms of use</p>
+    <p><input type="checkbox" required/>I agree with the terms of use</p>
     <input type="submit" id="btn" value="Sign Up" name="submit" />
     <p>or sign up with</p>
     <div>
