--- a/Raincheck home page/index.html
+++ b/Raincheck home page/index.html
@@ -27,6 +27,7 @@
       <button onclick="getCurrentLocation()">Get Current Location</button>
     </div>
     <div id="weatherInfo"></div>
+    <div id="photo-container"></div>
   </main>
   <script src="script.js"></script>
 </body>
