Sign-up page media query done

--- a/Home.html
+++ b/Home.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="Home.css">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDedATs1gxl-sUVIeqFtK4oq-xQ6P8PN8s&libraries=places"></script>
 </head>
 <body>
