--- a/About.html
+++ b/About.html
@@ -12,7 +12,7 @@
         <div class="navigation">
             <header>
                 <div class="buttons">
-                    <a style=" margin-left: 5%;" href="./Home.html" class="button-home">Home</a>
+                    <a style=" margin-left: 5%;" href="./Home.php" class="button-home">Home</a>
                     <a href="./About.html" class="button-about">About Us</a>
                     <a href="#" class="button-faq">FAQ</a>
                 </div>
