--- a/index.html
+++ b/index.html
@@ -9,43 +9,37 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="login-container">
-      <img src="./Brand-Logo.png" alt="Placeholder Image" />
-      <form class="sign-in-form" name="SignInForm" action="SignIn.php" method="POST">
-        <h1>Sign In</h1>
-        <div class="need-fix">
-          <label for="email">Email</label>
-          <input type="text" id="username" name="username" />
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" />
-          <p><input type="checkbox" />Remember Me</p>
-          <p><a href="./ForgotPassword.html">Forgot Password?</a></p>
-          <button class="submitBtnSignIn" type="submit" name="submitFromSignIn">
-            Sign In
-          </button>
-        </div>
-        <div class="social-login">
-          <p>Or sign in with:</p>
-          <div>
-            <a href="#"><ion-icon class="google" name="logo-google"></ion-icon></a>
-            <a href="#"><ion-icon class="facebook" name="logo-facebook"></ion-icon></a>
-            <a href="#">
-              <ion-icon class="instagram" name="logo-instagram"></ion-icon></a>
-            <a href="#">
-              <ion-icon class="linkedin" name="logo-linkedin"></ion-icon></a>
-          </div>
-        </div>
-        <div class="forgot-password">
-          Don't have an account?
-          <a href="./SignUp.html">Click here to Sign Up</a>
-        </div>
-      </form>
-    </div>
-    <div class="image-container">
-      <img src="./Logo.png" alt="Placeholder Image" />
-    </div>
+  <div class="Left">
+    <img src="./Logo.png" alt="Logo" />
+    <div class="title">RAINCHECK</div>
   </div>
-</body>
+    <form 
+      class="sign-in-form" 
+      name="SignInForm" 
+      action="SignIn.php" 
+      method="POST"
+    >
+      <h1 style="margin-top: 2em;">Sign In</h1>
+      <div class="input-wrapper">
+        <label for="email">Email</label><br>
+        <input type="text" id="username" name="username" /><br>
+      </div>
+      <div class="input-wrapper">
+        <label for="password">Password</label><br>
+        <input type="password" id="password" name="password" />
+      </div>
+        <p><input type="checkbox" />Remember Me</p>
+        <p><a href="./ForgotPassword.html">Forgot Password?</a></p>
+        <button class="submitBtnSignIn" id="btn" type="submit" name="submitFromSignIn">
+          Sign In
+        </button>
 
+      <div class="forgot-password">
+        Don't have an account?
+        <a href="./SignUp.html">Click here to Sign Up</a>
+      </div>
+    </form>
+  </div>
+    
+</body>
 </html>
