--- a/index.html
+++ b/index.html
@@ -1,45 +1,44 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Log In</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
 
-<head>
-  <title>Log In</title>
-  <link rel="stylesheet" type="text/css" href="style.css" />
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-</head>
-
-<body>
-  <div class="Left">
-    <img src="./Logo.png" alt="Logo" />
-    <div class="title">RAINCHECK</div>
-  </div>
-    <form 
-      class="sign-in-form" 
-      name="SignInForm" 
-      action="SignIn.php" 
-      method="POST"
-    >
-      <h1 style="margin-top: 2em;">Sign In</h1>
-      <div class="input-wrapper">
-        <label for="email">Email</label><br>
-        <input type="text" id="username" name="username" /><br>
+  <body>
+    <div class="container">
+      <div class="login-container">
+        <form
+          class="sign-in-form"
+          name="SignInForm"
+          action="SignIn.php"
+          method="POST"
+        >
+          <h1>Sign In</h1>
+          <div class="need-fix">
+            <label for="email">Email</label>
+            <input type="text" id="username" name="username" />
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" />
+            <p><input type="checkbox" />Remember Me</p>
+            <p><a href="./ForgotPassword.html">Forgot Password?</a></p>
+            <button
+              class="submitBtnSignIn"
+              type="submit"
+              name="submitFromSignIn"
+            >
+              Sign In
+            </button>
+          </div>
+          <div class="forgot-password" style="margin-top: 15px">
+            Don't have an account?
+            <a href="./SignUp.html">Click here to Sign Up</a>
+          </div>
+        </form>
       </div>
-      <div class="input-wrapper">
-        <label for="password">Password</label><br>
-        <input type="password" id="password" name="password" />
+      <div class="image-container">
+        <img src="./Logo.png" alt="Placeholder Image" />
       </div>
-        <p><input type="checkbox" />Remember Me</p>
-        <p><a href="./ForgotPassword.html">Forgot Password?</a></p>
-        <button class="submitBtnSignIn" id="btn" type="submit" name="submitFromSignIn">
-          Sign In
-        </button>
-
-      <div class="forgot-password">
-        Don't have an account?
-        <a href="./SignUp.html">Click here to Sign Up</a>
-      </div>
-    </form>
-  </div>
-    
-</body>
+    </div>
+  </body>
 </html>
